# ai-dev-container

./: .gitws.yml  CLAUDE.md  Cargo.toml  README.ja.md  README.md  aicm-config.yml  test_shell_integration.sh
.cargo/: config.toml
.cursor/rules/: 01_project-overview.mdc  01_project.mdc  02_common-commands.mdc  02_rust.mdc  03_project_rule.mdc  03_working-rules.mdc  04_current-state.mdc  05_language-specific.mdc  06_rust-rule.mdc
.github/workflows/: release.yml  rust.yml
ai-docs/contexts/: 01_project-overview.md  04_current-state.md  05_language-specific.md  06_rust-rule.md
ai-docs/designs/: design.md  tasks.md
ai-docs/rules/: 01_project.md  02_common-commands.md  02_rust.md  03_project_rule.md  03_working-rules.md
ai-docs/works/: 20250619-ai-workspace-isolation-tool.md  20250619-simple-workspace-tool-design.md  20250621-implementation-tasks-breakdown.md  20250621-task-1-1-basic-cli-framework.md  20250621-task-1-2-project-structure.md  20250621-task-2-2-config-loading.md  20250622-task-3-1-git-operations.md  20250622-task-3-2-worktree-implementation.md  20250622-task-4-tui-implementation.md  20250623-file-copy-feature.md  20250623-pre-commands-feature.md  20250623-tui-navigation-feature.md
src/: cli.rs  config.rs  error.rs  main.rs  utils.rs  workspace.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
