[package]
name = "gwork"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
git2 = "0.20"
ratatui = "0.24"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3.0"
