[package]
name = "gitws"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gitws"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
git2 = "0.20"
ratatui = "0.29"
crossterm = "0.29"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"
